manifests/terrakube-3.17.2.tgz-manifest.yaml
---
# Source: terrakube/charts/dex/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-dex
  labels:
    helm.sh/chart: dex-0.16.0
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.38.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5556
      targetPort: http
      protocol: TCP
      appProtocol: http
    - name: telemetry
      port: 5558
      targetPort: telemetry
      protocol: TCP
      appProtocol: http
  selector:
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: my-release
---
# Source: terrakube/charts/minio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-minio
  namespace: "default"
  labels:
    app.kubernetes.io/name: minio
    helm.sh/chart: minio-12.1.8
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: minio-api
      port: 9000
      targetPort: minio-api
      nodePort: null
    - name: minio-console
      port: 9001
      targetPort: minio-console
      nodePort: null
  selector:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: my-release
---
# Source: terrakube/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-postgresql-hl
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.2.1
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
    # Use this annotation in addition to the actual publishNotReadyAddresses
    # field below because the annotation will stop being respected soon but the
    # field is broken in some versions of Kubernetes:
    # https://github.com/kubernetes/kubernetes/issues/58662
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: primary
---
# Source: terrakube/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.2.1
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: primary
---
# Source: terrakube/charts/redis/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-redis-headless
  namespace: "default"
  labels:
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-17.10.1
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
  annotations:
    
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: my-release
---
# Source: terrakube/charts/redis/templates/master/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-redis-master
  namespace: "default"
  labels:
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-17.10.1
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: master
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
      nodePort: null
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: master
---
# Source: terrakube/templates/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: terrakube-api-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: terrakube-api
---
# Source: terrakube/templates/service-executor.yaml
apiVersion: v1
kind: Service
metadata:
  name: terrakube-executor-service 
spec:
  type: ClusterIP
  ports:
  - port: 8090
    targetPort: 8090
  selector:
    app: terrakube-executor
---
# Source: terrakube/templates/service-openldap.yaml
apiVersion: v1
kind: Service
metadata:
  name: terrakube-openldap-service 
spec:
  type: "ClusterIP"
  ports:
  - port: 1389
    targetPort: 1389
  selector:
    app: terrakube-openldap
---
# Source: terrakube/templates/service-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: terrakube-registry-service 
spec:
  type: ClusterIP
  ports:
  - port: 8075
    targetPort: 8075
  selector:
    app: terrakube-registry
---
# Source: terrakube/templates/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: terrakube-ui-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: terrakube-ui
---
# Source: terrakube/charts/dex/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-dex
  labels:
    helm.sh/chart: dex-0.16.0
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.38.0"
    app.kubernetes.io/managed-by: Helm
    
  
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: dex
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
      
        checksum/config: 79265e190db866bd3cd7dcb9328604fcbe708c911f03cb7e67ce9aac74fa7c99
      labels:
        app.kubernetes.io/name: dex
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-dex
      securityContext:
        {}
      containers:
        - name: dex
          securityContext:
            {}
          image: "ghcr.io/dexidp/dex:v2.38.0"
          imagePullPolicy: IfNotPresent
          args:
            - dex
            - serve
            - --web-http-addr
            - 0.0.0.0:5556
            - --telemetry-addr
            - 0.0.0.0:5558
            - /etc/dex/config.yaml
          ports:
            - name: http
              containerPort: 5556
              protocol: TCP
            - name: telemetry
              containerPort: 5558
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: telemetry
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: telemetry
          resources:
            {}
          volumeMounts:
            - name: config
              mountPath: /etc/dex
              readOnly: true
      volumes:
        - name: config
          secret:
            secretName: my-release-dex
        - name: gcp-credentials
          secret:
            items:
            - key: gcp-credentials
              path: gcp-credentials
            secretName: terrakube-dex-secrets
---
# Source: terrakube/charts/minio/templates/standalone/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-minio
  namespace: "default"
  labels:
    app.kubernetes.io/name: minio
    helm.sh/chart: minio-12.1.8
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
      app.kubernetes.io/instance: my-release
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
        helm.sh/chart: minio-12.1.8
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
      annotations:
        checksum/credentials-secret: 618124d3c3e16064464de67c62cce573b1e0e0d5dc6610e8097f6e171953a554
    spec:
      
      serviceAccountName: my-release-minio
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: minio
                    app.kubernetes.io/instance: my-release
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: minio
          image: docker.io/bitnami/minio:2023.2.22-debian-11-r0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: minio-api
              containerPort: 9000
              protocol: TCP
            - name: minio-console
              containerPort: 9001
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: minio-api
              scheme: "HTTP"
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: minio-api
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: my-release-minio
---
# Source: terrakube/templates/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terrakube-api
  labels:
    app: terrakube-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terrakube-api
  template:
    metadata:
      labels:
        app: terrakube-api
      annotations:
        checksum/config: 137c9e4c6c711dd678aa0b3985c7fce0e933a687783865949e8b1c2a182289e4
    spec:
      containers:
      - name: terrakube-api
        image: azbuilder/api-server:2.21.1
        ports:
        - containerPort: 8080
        volumeMounts:
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 10
---
# Source: terrakube/templates/deployment-executor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terrakube-executor
  labels:
    app: terrakube-executor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terrakube-executor
  template:
    metadata:
      labels:
        app: terrakube-executor
      annotations:
        checksum/config: 5aa87e32c4fb02793805d8132b53b1fdf5452f65a2861d8c3d9b1c80d98e444b
    spec:
      containers:
      - name: terrakube-executor
        image: azbuilder/executor:2.21.1
        ports:
        - containerPort: 8090
        volumeMounts:
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8090
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8090
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8090
          initialDelaySeconds: 120
          periodSeconds: 10
---
# Source: terrakube/templates/deployment-openldap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terrakube-openldap
  labels:
    app: terrakube-openldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terrakube-openldap
  template:
    metadata:
      labels:
        app: terrakube-openldap
      annotations:
        checksum/config: fc96d78f80abeea146ae67bf4bd2559ca58242a876b148d3e4a489777b825ad8
    spec:
      containers:
      - name: terrakube-openldap
        image: bitnami/openldap:2.6.4-debian-11-r4
        ports:
        - containerPort: 1389
        volumeMounts:
        - name: openldap-config
          mountPath: "/ldifs/config-ldap.ldif"
          subPath: "config-ldap.ldif"
          readOnly: true
      volumes:
        - name: openldap-config
          secret:
            secretName: terrakube-openldap-secrets
            items:
            - key: "config-ldap.ldif"
              path: "config-ldap.ldif"
---
# Source: terrakube/templates/deployment-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terrakube-registry
  labels:
    app: terrakube-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terrakube-registry
  template:
    metadata:
      labels:
        app: terrakube-registry
      annotations:
        checksum/config: 91672ed08bb3f5ec8c359e0f3ee8be3bd12e7124915dccab5682f54efb0969a9
    spec:
      containers:
      - name: terrakube-registry
        image: azbuilder/open-registry:2.21.1
        ports:
        - containerPort: 8075
        volumeMounts:
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8075
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8075
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8075
          initialDelaySeconds: 120
          periodSeconds: 10
---
# Source: terrakube/templates/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terrakube-ui
  labels:
    app: terrakube-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terrakube-ui
  template:
    metadata:
      labels:
        app: terrakube-ui
      annotations:
        checksum/config: 77de311f9279ef3f3ffb563fb40bf8a10b67d4823745ee2cded300add80f52b0
    spec:
      containers:
      - name: terrakube-ui
        image: azbuilder/terrakube-ui:2.21.1
        volumeMounts:
        - name: ui-config
          mountPath: "/app/env-config.js"
          subPath: "env-config.js"
          readOnly: true
        ports:
        - containerPort: 8080
      volumes:
      - name: ui-config
        secret:
          secretName: terrakube-ui-secrets
          items:
          - key: env-config.js
            path: env-config.js
---
# Source: terrakube/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-release-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.2.1
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  serviceName: my-release-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: my-release-postgresql
      labels:
        app.kubernetes.io/name: postgresql
        helm.sh/chart: postgresql-12.2.1
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: default
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/bitnami/postgresql:15.2.0-debian-11-r2
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "terrakube" -d "dbname=terrakube" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                
                - |
                  exec pg_isready -U "terrakube" -d "dbname=terrakube" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: terrakube/charts/redis/templates/master/application.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-release-redis-master
  namespace: "default"
  labels:
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-17.10.1
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: master
  serviceName: my-release-redis-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        helm.sh/chart: redis-17.10.1
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: master
      annotations:
        checksum/configmap: ecd76d789ec47a7a034ec82f0b893d3bb1cce9032476e0609f25166898b3a744
        checksum/health: 4bb65331e329d47c549849d807a2e792e7c040a1d6cd48032be175065d1e6443
        checksum/scripts: 4fd66a8fe277ace15f50da353c50ac6b079c87aa5b9ecd239ac94b98d8b77d97
        checksum/secret: 5874ed2d89b63976553d23616a525648aabded79999e2271e63b4fe4b17504d3
    spec:
      
      securityContext:
        fsGroup: 1001
      serviceAccountName: my-release-redis
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: redis
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/component: master
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      terminationGracePeriodSeconds: 30
      containers:
        - name: redis
          image: docker.io/bitnami/redis:7.0.11-debian-11-r0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          command:
            - /bin/bash
          args:
            - -c
            - /opt/bitnami/scripts/start-scripts/start-master.sh
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            # One second longer than command timeout should prevent generation of zombie processes.
            timeoutSeconds: 6
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_liveness_local.sh 5
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local.sh 1
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: start-scripts
              mountPath: /opt/bitnami/scripts/start-scripts
            - name: health
              mountPath: /health
            - name: redis-data
              mountPath: /data
            - name: config
              mountPath: /opt/bitnami/redis/mounted-etc
            - name: redis-tmp-conf
              mountPath: /opt/bitnami/redis/etc/
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: start-scripts
          configMap:
            name: my-release-redis-scripts
            defaultMode: 0755
        - name: health
          configMap:
            name: my-release-redis-health
            defaultMode: 0755
        - name: config
          configMap:
            name: my-release-redis-configuration
        - name: redis-tmp-conf
          emptyDir: {}
        - name: tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: redis-data
        labels:
          app.kubernetes.io/name: redis
          app.kubernetes.io/instance: my-release
          app.kubernetes.io/component: master
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: terrakube/templates/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terrakube-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: proxy_set_header Authorization
      $http_authorization;
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  
  rules:
  - host: "terrakube-api.minikube.net"
    http:
      paths:
      - path: "/"
        pathType: "Prefix"
        backend:
          service:
            name: terrakube-api-service
            port:
              number: 8080
      - path: "/dex/"
        pathType: "Prefix"
        backend:
          service:
            name: my-release-dex
            port:
              number: 5556
---
# Source: terrakube/templates/ingress-registry.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terrakube-registry-ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: proxy_set_header Authorization
      $http_authorization;
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  
  rules:
  - host:  "terrakube-reg.minikube.net"
    http:
      paths:
      - path: "/"
        pathType: "Prefix"
        backend:
          service:
            name: terrakube-registry-service
            port:
              number: 8075
---
# Source: terrakube/templates/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terrakube-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  
  rules:
  - host:  "terrakube-ui.minikube.net"
    http:
      paths:
      - path: "/"
        pathType: "Prefix"
        backend:
          service:
            name: terrakube-ui-service
            port:
              number: 8080
